test/data/resolver/valid/carry_nullable_binding.cypher
OPTIONAL MATCH (a:Person) WITH a RETURN a
