test/data/resolver/invalid/part_binding_type_conflict.cypher
MATCH (a:Person) WITH a MATCH (a:Post) RETURN a
